# kamiru_video_to_contact_sheets

./: .coverage  Abrir Video to Contact Sheets.vbs  Instalar en Linux.sh  MANUAL.md  README.md  pyproject.toml  requirements.txt  run.bat  run.command  run.sh
.github/workflows/: release.yml
Kamiru.app/Contents/: Info.plist
Kamiru.app/Contents/MacOS/: Kamiru
Video to Contact Sheets.app/Contents/: Info.plist
Video to Contact Sheets.app/Contents/MacOS/: VideoToContactSheets
Video to Contact Sheets.app/Contents/Resources/: AppIcon.icns
kamiru/: __init__.py  app.py  calibration.py  config.py  core.py  cyanotype.py  dedup.py  ffmpeg_utils.py  gui_common.py  gui_phases.py  layoutfile.py  markers.py  rescue.py  scan.py  videoout.py
tests/: test_pipeline.py
